--- a/client/src/components/Layout/Home/Home.module.scss
+++ b/client/src/components/Layout/Home/Home.module.scss
@@ -1,7 +1,244 @@
-.Home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--primary-color);
+a {
+    text-decoration: none;
+}
+
+.Home {
+    // background-image: linear-gradient(to left bottom, #1E1311, #0c0605);
+    background-color: #1E1311;
+    overflow: hidden;
+    .header {
+        z-index: 2;
+        position: relative;
+
+        .Bar {
+            position: fixed;
+            padding: 0;
+            top: 0;
+            right: 0;
+            left: 0;
+
+            .barLogo img {
+                width: 68px;
+                height: 68px;
+            }
+
+            .containerBar {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+
+                a {
+                    color: var(--primary-text-color);
+                    font-size: 2.4rem;
+                }
+
+                .navBar {
+                    display: flex;
+                    justify-content: flex-end;
+                    width: 268px;
+                    margin-right: 20px;
+
+                    @media (max-width:739px) {
+                        display: none;
+                    }
+
+                    .navBarBtnHelp {
+                        display: flex;
+                        justify-content: flex-end;
+                    }
+
+                    .navBarBtnLogin {
+                        padding: 0 10px;
+
+                        p {
+                            border: 1px solid var(--secondary-text-color);
+                            border-radius: 30px;
+                            padding: 0 10px;
+                        }
+
+                    }
+                }
+
+                .sideBar {
+                    color: var(--primary-text-color);
+                    font-size: 2.4rem;
+
+                    .sideBarMenuBtn i {
+                        display: flex;
+                        justify-content: flex-end;
+                        margin-right: 20px;
+                        cursor: pointer;
+                    }
+
+                    .sideBarContent {
+                        height: 1000px;
+                        background-color: #000;
+
+                        .sideBarContentBtn {
+                            margin: 10px 0 20px 10px;
+                        }
+
+                        .sideBarContentBtn i {
+                            cursor: pointer;
+                        }
+
+                        .sideBarBtn {
+                            margin-top: 20px;
+                            margin-bottom: 20px;
+                            border: 1px solid var(--secondary-text-color);
+                            border-radius: 20px;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+
+    .body {
+        z-index: 1;
+        display: flex;
+        justify-content: space-between;
+
+        .backGroundSlide {
+            height: 730px;
+            @media (max-width:1113px) {
+                height: 380px;
+            }
+        }
+
+        .container {
+            margin-top: 120px;
+
+            @media (max-width:1113px) {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin-top: 80px;
+            }
+
+            .contentContainer {
+                @media (max-width:1113px) {
+                    display: flex;
+                    justify-content: center;
+                }
+
+                .content {
+                    color: var(--primary-text-color);
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    width: 460px;
+
+                    @media (max-width:1113px) {
+                        width: 500px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    }
+
+                    .contentTitle {
+                        font-size: 3.6rem;
+                        font-weight: 500;
+                        text-align: left;
+
+                        @media (max-width:1113px) {
+                            text-align: center;
+                        }
+
+                    }
+
+                    .contentBody {
+                        margin-top: 16px;
+                        font-size: 2rem;
+                        font-weight: 300;
+                        text-align: left;
+
+                        @media (max-width:1113px) {
+                            text-align: center;
+                        }
+                    }
+
+                    .contentUpload {
+                        width: 384px;
+                        height: 244px;
+                        background-color: rgba(54, 49, 49, 0.4);
+                        margin-top: 40px;
+                        border: 3px dashed var(--secondary-text-color);
+                        border-radius: 30px;
+                        padding: 40px;
+
+                        &:hover {
+                            background-color: rgba(54, 49, 49, 0.8);
+                            cursor: pointer;
+                        }
+
+                        a {
+                            color: var(--primary-text-color);
+
+                            .contentUploadIcon {
+                                font-size: 4rem;
+                            }
+
+                            .contentUploadDrop {
+                                margin: 4px 0;
+                                font-size: 2rem;
+                                font-weight: 500;
+                                height: 80px;
+                                display: flex;
+                                align-items: center;
+                            }
+
+                            .contentUploadFooter {
+                                font-size: 1.4rem;
+                                color: var(--secondary-text-color);
+                                text-decoration: underline;
+                            }
+                        }
+
+                    }
+                }
+            }
+
+
+            .footer {
+                color: var(--secondary-text-color);
+                margin-top: 10px;
+                padding-right: 20px;
+                text-align: right;
+                font-size: 1.2rem;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                @media (max-width:1113px) {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                }
+                .footerBtnCookie {
+                    margin-top: 10px;
+                    width: 144px;
+                    border: 1px solid var(--secondary-text-color);
+                    border-radius: 30px;
+                }
+                .footerContent {
+                    margin-top: 20px;
+                }
+            }
+        }
+    }
+}
+
+/*  PC  */
+@media (min-width: 1113px) {}
+
+/*  Tablet */
+@media (min-width:740px) and (max-width:1113px) {}
+
+/* Mobile */
+@media (max-width:739px) {
+    .navBar {
+        display: none;
+    }
 }
